--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -122,7 +122,7 @@
 .input-group {
     margin-bottom: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 3fr 1fr;
     gap: 15px;
 }
 .query-card label {
